--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,28 +1,27 @@
 @font-face {
-    font-family: "Young Serif";
-    src: url(../../assets/fonts/young-serif/YoungSerif-Regular.ttf)
-        format(truetype);
+  font-family: "Young Serif";
+  src: url(../../assets/fonts/young-serif/YoungSerif-Regular.ttf)
+    format(truetype);
 }
 
 @font-face {
-    font-family: "Outfit";
-    src: url(../../assets/fonts/outfit/Outfit-VariableFont_wght.ttf)
-        format(truetype);
+  font-family: "Outfit";
+  src: url(../../assets/fonts/outfit/Outfit-VariableFont_wght.ttf)
+    format(truetype);
 }
 
 @font-face {
-    font-family: "OutfitStatic";
-    src: url(../../assets/fonts/outfit/static/Outfit-Regular.ttf)
-        format(truetype);
+  font-family: "OutfitStatic";
+  src: url(../../assets/fonts/outfit/static/Outfit-Regular.ttf) format(truetype);
 }
 
 @font-face {
-    font-family: "OutfitStatic";
-    src: url(../../assets/fonts/outfit/static/Outfit-SemiBold.ttf)
-        format(truetype);
+  font-family: "OutfitStatic";
+  src: url(../../assets/fonts/outfit/static/Outfit-SemiBold.ttf)
+    format(truetype);
 }
 
 @font-face {
-    font-family: "OutfitStatic";
-    src: url(../../assets/fonts/outfit/static/Outfit-Bold.ttf);
+  font-family: "OutfitStatic";
+  src: url(../../assets/fonts/outfit/static/Outfit-Bold.ttf);
 }
